Fix responsive issue. Add primary component. Fix <After refresh, the activated item is not showing correct in side bar>.

--- a/src/assets/css/side-bar.css
+++ b/src/assets/css/side-bar.css
@@ -148,6 +148,10 @@
   color:#9E9E9E;
 }
 
+.cbp-hide{
+  display: none;
+}
+
 .cbp-red{
   color:red;
 }
